--- a/PPT/GS-Vitalis.html
+++ b/PPT/GS-Vitalis.html
@@ -224,21 +224,21 @@
                     <table style="width: 100%; border-collapse: collapse; font-size: 14px; border: 1px solid rgba(255,255,255,0.2);">
                         <thead>
                             <tr style="background: rgba(255,255,255,0.1);">
-                                <th style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">年份</th>
-                                <th style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">发射</th>
-                                <th style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">报废</th>
+                                <th style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">年份</th>
+                                <th style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">发射</th>
+                                <th style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">报废</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">2024</td>
-                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">1919</td>
-                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">316</td>
+                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">2024</td>
+                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">1919</td>
+                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">316</td>
                             </tr>
                             <tr>
-                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">2025</td>
-                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;">3095</td>
-                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px; color: #ef4444; font-weight: 900; font-size: 16px;">1000+?</td>
+                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">2025</td>
+                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px;text-align: center;">3095</td>
+                                <td style="border: 1px solid rgba(255,255,255,0.1); padding: 10px 5px; color: #ef4444; font-weight: 900; font-size: 16px;text-align: center;">1000+?</td>
                             </tr>
                         </tbody>
                     </table>
@@ -1406,7 +1406,7 @@
                             <tr style="border-bottom: 1px solid rgba(255,255,255,0.05);">
                                 <td style="padding: 10px; color: #cbd5e1;">拟合推算电量</td>
                                 <td style="text-align: center;">44.1 Ah</td>
-                                <td style="text-align: center;">40.5 Ah</td>
+                                <td style="text-align: center;">42.8 Ah</td>
                             </tr>
                             <tr style="background: rgba(255,255,255,0.02);">
                                 <td style="padding: 10px; color: #94a3b8; font-size: 12px;">遥测代号</td>
@@ -1426,11 +1426,11 @@
                 <div style="flex: 1; display: flex; gap: 15px; align-items: stretch;">
                     <div style="flex: 1; background: rgba(59, 130, 246, 0.1); border-radius: 6px; padding: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                         <div style="font-size: 12px; color: #93c5fd;">容量损失 (Capacity Loss)</div>
-                        <div style="font-size: 20px; font-weight: bold; color: #fff;">-3.6 Ah</div>
+                        <div style="font-size: 20px; font-weight: bold; color: #fff;">-1.3 Ah</div>
                     </div>
                     <div style="flex: 1; background: rgba(239, 68, 68, 0.1); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 6px; padding: 10px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                         <div style="font-size: 12px; color: #fca5a5;">当前衰减率 (Decay Rate)</div>
-                        <div style="font-size: 28px; font-weight: 800; color: #ef4444;">8.16%</div>
+                        <div style="font-size: 28px; font-weight: 800; color: #ef4444;">2.95%</div>
                     </div>
                 </div>
 
