--- a/PPT/GS-Vitalis.html
+++ b/PPT/GS-Vitalis.html
@@ -388,7 +388,7 @@
                     <div class="glass-panel" style="padding: 25px 30px; display: flex; gap: 25px; align-items: flex-start; border-left: 4px solid #10b981; background: linear-gradient(90deg, rgba(16, 185, 129, 0.05) 0%, rgba(15, 23, 42, 0.4) 100%); transition: transform 0.3s;">
                         <div style="min-width: 60px; height: 60px; background: rgba(16, 185, 129, 0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 30px;">📄</div>
                         <div style="flex: 1;">
-                            <div style="font-size: 22px; font-weight: bold; color: #fff; margin-bottom: 10px;">全自动深度体检</div>
+                            <div style="font-size: 22px; font-weight: bold; color: #fff; margin-bottom: 10px;">全自动深度体检（体检中心）</div>
                             <div style="font-size: 15px; color: #cbd5e1; line-height: 1.6; margin-bottom: 15px;">
                                 替代人工，定期对卫星进行全方位的“身体检查”。深度挖掘单机性能退化趋势，自动生成权威的健康诊断报告。
                             </div>
@@ -404,7 +404,7 @@
                     <div class="glass-panel" style="padding: 25px 30px; display: flex; gap: 25px; align-items: flex-start; border-left: 4px solid #3b82f6; background: linear-gradient(90deg, rgba(59, 130, 246, 0.05) 0%, rgba(15, 23, 42, 0.4) 100%); transition: transform 0.3s;">
                         <div style="min-width: 60px; height: 60px; background: rgba(59, 130, 246, 0.2); border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 30px;">🧠</div>
                         <div style="flex: 1;">
-                            <div style="font-size: 22px; font-weight: bold; color: #fff; margin-bottom: 10px;">伴随式专家辅助</div>
+                            <div style="font-size: 22px; font-weight: bold; color: #fff; margin-bottom: 10px;">伴随式专家辅助（门诊）</div>
                             <div style="font-size: 15px; color: #cbd5e1; line-height: 1.6; margin-bottom: 15px;">
                                 内嵌姿轨控专家知识库。当发生异常（如安全模式）时，能基于先验经验快速关联数据，提供专业的处置参考意见。
                             </div>
@@ -1636,7 +1636,7 @@
     <div class="slide-header" style="height: 70px; display: flex; justify-content: space-between; align-items: flex-end; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 15px; margin-bottom: 20px;">
         <div>
             <div class="slide-title" style="font-size: 40px; background: linear-gradient(to right, #fff, #3b82f6); -webkit-background-clip: text; -webkit-text-fill-color: transparent; font-weight: 800; letter-spacing: 1px;">
-                技术展望：GS-Vitalis Pro
+                技术展望：银河航天&北邮天算星座课题组
             </div>
             <div class="slide-sub" style="font-size: 14px; letter-spacing: 1px; color: #94a3b8; margin-top: 6px; font-family: Arial, sans-serif;">
                 TECHNOLOGY ROADMAP: TIME-SERIES PREDICTION & PHYSICS-INFORMED AI
